# ChangeLog for gnustep-base/gnustep-base
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnustep-base/gnustep-base/ChangeLog,v 1.53 2007/11/16 14:59:54 beandog Exp $

  16 Nov 2007; Steve Dibb <beandog@gentoo.org> gnustep-base-1.14.0.ebuild:
  amd64 stable, bug 195990

  27 Oct 2007; nixnut <nixnut@gentoo.org> gnustep-base-1.14.0.ebuild:
  Stable on ppc wrt bug 195990

  17 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  gnustep-base-1.14.0.ebuild:
  stable x86, bug 195990

  03 Oct 2007; Raúl Porcel <armin76@gentoo.org> gnustep-base-1.14.0.ebuild:
  Re-add ~sparc wrt #189372

  18 Sep 2007; Fabian Groffen <grobian@gentoo.org>
  gnustep-base-1.14.0.ebuild:
  Fix for bug #190744, make sure autogsdoc uses the just compiled gnustep-base
  library

  10 Sep 2007; Joseph Jezak <josejx@gentoo.org> gnustep-base-1.14.0.ebuild:
  Marked ~ppc for bug #189372.

  06 Sep 2007; Bernard Cafarelli <voyageur@gentoo.org>
  -files/base-user-defaults.patch-1.10.0, -gnustep-base-1.10.3.ebuild,
  -gnustep-base-1.10.3-r1.ebuild:
  Remove old versions, bug #139385

  06 Sep 2007; Raúl Porcel <armin76@gentoo.org> gnustep-base-1.14.0.ebuild:
  Add ~alpha wrt #189372

  05 Sep 2007; Joseph Jezak <josejx@gentoo.org>
  gnustep-base-1.13.0-r1.ebuild:
  Marked ppc stable for bug #139385.

  22 Aug 2007; Roy Marples <uberlord@gentoo.org> gnustep-base-1.14.0.ebuild:
  Keyworded ~x86-fbsd, #183467 thanks to Nathan Smith.

*gnustep-base-1.14.0 (18 Aug 2007)

  18 Aug 2007; Fabian Groffen <grobian@gentoo.org>
  +gnustep-base-1.14.0.ebuild:
  Bump from GNUstep overlay.  Using new gnustep eclasses

  15 Mar 2007; Fabian Groffen <grobian@gentoo.org>
  gnustep-base-1.10.3.ebuild, gnustep-base-1.10.3-r1.ebuild,
  gnustep-base-1.12.0.ebuild, gnustep-base-1.13.0-r1.ebuild:
  Fix QA issues as reported in bug #168179, with thanks to Ciaran McCreesh
  <ciaranm [at) ciaranm.org>

*gnustep-base-1.13.0-r1 (05 Dec 2006)
