@@ -1,5 +1,7 @@
 AUX 50-gnustep-revdep 35 RMD160 f9508891da2de58ef884baabf9206577653a409b SHA1 40e21ae24078afb92067f51ca82722f20b742512 SHA256 e0bde19a964f2ae01855b4353c3d2af7b0b0ca25231827798ebfea16e435d3a2
 DIST gnustep-base-1.14.0.tar.gz 2375895 RMD160 11eec8f70a219d747424fab4549ec20519d0f098 SHA1 114e3ac88cedec62d68a3bfb9993a50900cc827a SHA256 ccd55e5f3b473348661fe8e00491b21b1e1f481fab394df81a542cc3903ab65a
+DIST gnustep-base-1.14.1.tar.gz 2368190 RMD160 43dc9fd0be2e0c35a9c4730843a284ca344859f1 SHA1 b1a280d7d9d729537a64ebfab7e304cf161c7f40 SHA256 ba8747db113f2d32d4666bb04aa06a092c153484e0943a43ad142b200939517d
 EBUILD gnustep-base-1.14.0.ebuild 2277 RMD160 07081d8d9001c993aefbf4be360beae74d3a5983 SHA1 b6886f29149877f155b66d0aabb28380badb7c23 SHA256 4af6cf3d532d796e4a5575727200ad63fff2479ddbe1bd018a9aa489dbcbb3c3
-MISC ChangeLog 12905 RMD160 dd866a604d579e66bf10ff910d1713b6f162f030 SHA1 d7eee0eb90c52fd19dfbe9cf1fe891a8aa3d4530 SHA256 46b15a17da2e57968c6f5781c94e5d9fdcffe182e613e916c1868c1cee53f51c
+EBUILD gnustep-base-1.14.1.ebuild 2278 RMD160 3345c439c8fb1fac01b04449962e5a66a33df421 SHA1 048382ccdc1f7e924daa0c2684c25c4fa4cb8b50 SHA256 d4178e4315578ca2c5446c690bee265a4d4bd527b8b5d3713fdbab66a57fc6f4
+MISC ChangeLog 13051 RMD160 2de86a18396a71c010b0290872e096a18a7c033f SHA1 83bd5616efef9fbee3428879ce1b4f7387e82c9a SHA256 2e3464ece622bd5b27def45251e68363bc72cc9c7a5dba20eda92c5328d103b3
 MISC metadata.xml 670 RMD160 5d5b88faf28b66aa5d5d3efd6fe5844e980604c9 SHA1 9582400efd6733f27beaf47fa801065838d86955 SHA256 e08343661cc7ecb6d963be62092a270a45f8af0201c9523d1feeddfa09a417fa
