@@ -1,6 +1,12 @@
 # ChangeLog for gnustep-base/gnustep-base
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnustep-base/gnustep-base/ChangeLog,v 1.53 2007/11/16 14:59:54 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnustep-base/gnustep-base/ChangeLog,v 1.54 2007/11/19 12:45:09 voyageur Exp $
+
+*gnustep-base-1.14.1 (19 Nov 2007)
+
+  19 Nov 2007; Bernard Cafarelli <voyageur@gentoo.org>
+  +gnustep-base-1.14.1.ebuild:
+  Stable version bump
 
   16 Nov 2007; Steve Dibb <beandog@gentoo.org> gnustep-base-1.14.0.ebuild:
   amd64 stable, bug 195990
